<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_main"
    android:background="@color/white_half"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/view_user"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/this150dp"
                android:background="@drawable/chongzhi_item_selector"
                android:paddingBottom="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp">

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <common.AvatarImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/margin_80dp"
                    android:layout_height="@dimen/margin_80dp"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:src="@mipmap/icon_avater_no" />


                <TextView
                    android:id="@+id/tvname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_toRightOf="@+id/profile_image"
                    android:text="点击登录,登录后"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize20sp" />

                <TextView
                    android:id="@+id/tvmsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/profile_image"
                    android:layout_toEndOf="@+id/profile_image"
                    android:text="点击查看您的有关信息"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_15dp"
                    android:src="@mipmap/icon_arrowright" />


            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />


            <TextView
                android:id="@+id/txt_mywallet"
                style="@style/list_txt_Style"
                android:layout_marginTop="@dimen/margin_20dp"
                android:drawableLeft="@mipmap/icon_user_wallet"
                android:text="@string/wallet" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />

            <TextView
                android:id="@+id/txt_smartcard"
                style="@style/list_txt_Style"
                android:drawableLeft="@mipmap/icon_user_smartcard"
                android:text="@string/smartcard" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />

            <TextView
                android:id="@+id/txt_calendar"
                style="@style/list_txt_Style"
                android:drawableLeft="@mipmap/icon_user_calendar"
                android:text="@string/calendar" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />

            <TextView
                android:id="@+id/txt_myorder"
                style="@style/list_txt_Style"
                android:drawableLeft="@mipmap/icon_user_order"
                android:text="@string/order" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />


            <TextView
                android:id="@+id/txt_setting"
                style="@style/list_txt_Style"
                android:layout_marginTop="20dp"
                android:drawableLeft="@mipmap/icon_user_setting"
                android:drawablePadding="10dp"
                android:text="@string/setting" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />

            <TextView
                android:id="@+id/txt_userreading"
                style="@style/list_txt_Style"
                android:drawableLeft="@mipmap/icon_user_reading"
                android:text="@string/reading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />

            <TextView
                android:id="@+id/txt_shareapp"
                style="@style/list_txt_Style"
                android:drawableLeft="@mipmap/icon_share"
                android:text="@string/appshare" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:background="@color/black3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
