<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarwallet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        toolbar:titleTextColor="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="我的钱包"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize18sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/green4"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/zhye"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize26sp" />

        <TextView
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white_all"
            android:textSize="@dimen/textsize40sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/black3" />

        <TextView
            android:id="@+id/szmx"
            style="@style/list_txt_Style"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/szmx" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/black3" />

        <TextView
            android:id="@+id/zfmm"
            style="@style/list_txt_Style"
            android:text="@string/zfmm" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/chongzhi_item_selector"
            android:text="@string/chongzhi"
            android:textColor="@color/white_all"
            android:textSize="@dimen/textsize20sp" />

    </LinearLayout>


    <!--<include layout="@layout/durianloading_util"></include>-->
</LinearLayout>
